--- a/cost.html
+++ b/cost.html
@@ -5,6 +5,8 @@
     <title>Document</title>
 </head>
 <body>
+    <h1> Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae earum consectetur maxime quis reprehenderit odio illum, est voluptas. Laboriosam architecto corrupti commodi laudantium possimus debitis esse, numquam corporis obcaecati facere?</h1>
     <script src="const.js"></script>
 </body>
 </html>
+
