--- a/int.html
+++ b/int.html
@@ -6,7 +6,10 @@
 </head>
 <body>
     <h1>hello</h1>
-    <script src="const.js"></script>
+    
+    <script >
+        a=1+2-2*4
+    </script>
 </body>
 
 </html>
