--- a/pallela.html
+++ b/pallela.html
@@ -70,6 +70,30 @@
         console.log(adding)
 
 
+        function twoNumbers(t,y){
+            var result=t+y
+            return result
+        }
+        let leela=twoNumbers(5,4);
+        console.log(leela);
+
+
+        function sum(num1,num2){
+            return num1+num2
+        }
+        let result=sum(2,3);
+        console.log(result);
+
+
+        function rrr(){
+            console.log("hello"+" "+name)
+        }
+        let name= "sir"
+        rrr(name);
+        name="meena"
+        rrr(name);
+
+
 
 
     </script>
